Add an endpoint to get all books
